Bugfix: adjust z-index of modal component

--- a/css/style.css
+++ b/css/style.css
@@ -368,12 +368,13 @@ html {
   height: 100vh;
   width: 100vw;
   background-color: rgba(0, 0, 0, 0.9);
-  z-index: 100;
+  z-index: -100;
   visibility: hidden;
   opacity: 0; }
   .modal.active {
     visibility: visible;
-    opacity: 1; }
+    opacity: 1;
+    z-index: 100; }
   .modal__body {
     align-self: stretch;
     flex: 1;
