--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -5,14 +5,16 @@
   height: 100vh;
   width: 100vw;
   background-color: rgba(#000, .9);
-  z-index: 100;
+  z-index: -100;
 
   visibility: hidden;
   opacity: 0;
 
+
   &.active {
     visibility: visible;
     opacity: 1;
+    z-index: 100;
   }
   
 
